--- a/paper/diagonalsPermutahedra.tex
+++ b/paper/diagonalsPermutahedra.tex
@@ -216,7 +216,7 @@
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
-\title{The combinatorics of the permutahedron diagonals}
+\title{Diagonals of permutahedra}
 
 \thanks{}
 
@@ -4506,7 +4506,7 @@ This follows as a result of $r:\divcube{n}^{\SU}\to \divcube{n}^{\LA}$ being a $
 \begin{center}
 \begin{tikzcd}
 SCP \arrow[r,"t(r\times r)",leftrightarrow] \arrow[d,leftrightarrow] & SCP \arrow[d,leftrightarrow]\\
-\mathbb{S}_n \arrow[r,"r",leftrightarrow] & \mathbb{S}_n
+\mathbb{S}_n \arrow[r,"r"',leftrightarrow] & \mathbb{S}_n
 \end{tikzcd}
 \end{center}
 The vertical arrows are the defining bijection between SCPs and permutations (\cref{def:strong-complementary-pairs}).
@@ -4647,10 +4647,10 @@ The same holds when taking the~$\circ_i^\SU$ operations instead of the $\circ_i^
 	\begin{tikzcd}[column sep=2.2cm, row sep=1.3cm]
 	P_{t'}\times P_{t''}
 	\arrow[r,  "\circ_i^\LA"] 
-	\arrow[d,  "\Psi_{t'}\times\Psi_{t''}"]
+	\arrow[d,  "\Psi_{t'}\times\Psi_{t''}"']
 	& P_{t} \arrow[d,  "\Psi_t"] \\
 	P_{t'}\times P_{t''}  
-	\arrow[r,  "\circ_i^\SU"]
+	\arrow[r,  "\circ_i^\SU"']
 	& P_{t}
 	\end{tikzcd}
 	}}\]
