--- a/paper/diagonalsPermutahedra.tex
+++ b/paper/diagonalsPermutahedra.tex
@@ -216,7 +216,7 @@
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
-\title{Diagonals of permutahedra}
+\title{Cellular diagonals of permutahedra}
 
 \thanks{}
 
